# x402-skill

./: .env.example  .gitignore  Cargo.toml  README.md  SPEC.md  knope.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  prepare-release.yml  release.yml
claude/skills/x402/: SKILL.md  install.md
docs/plans/: 2026-01-24-x402-echo-server-design.md  2026-01-24-x402-echo-server-implementation.md  2026-01-24-x402-retry-skill-design.md  2026-01-24-x402curl-design.md  2026-01-24-x402curl-implementation.md
echo_server/: server.py
openclaw/skills/x402/: SKILL.md  install.md
skills/x402/: Install.md  SKILL.md  install.md
skills/x402-retry/: SKILL.md
src/: balance.rs  cli.rs  config.rs  error.rs  main.rs  output.rs  request.rs
tests/: integration.rs  test_echo.py
