[package]
name = "x402curl"
version = "0.1.0"
edition = "2021"
description = "curl with automatic x402 payment handling"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
x402-rs = "0.12"
x402-reqwest = "0.6"
reqwest = { version = "0.13", features = ["multipart", "json"] }
reqwest-middleware = "0.5"
dotenvy = "0.15"
toml = "0.8"
dirs = "6"
thiserror = "2"
alloy-signer-local = "1"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
