[package]
name = "x402curl"
version = "0.1.0"
edition = "2021"
description = "curl with automatic x402 payment handling"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
x402-types = { git = "https://github.com/x402-rs/x402-rs.git" }
x402-chain-eip155 = { git = "https://github.com/x402-rs/x402-rs.git", features = ["client"] }
x402-reqwest = { git = "https://github.com/x402-rs/x402-rs.git" }
reqwest = { version = "0.13", features = ["multipart", "json"] }
reqwest-middleware = { version = "0.5", features = ["multipart"] }
dotenvy = "0.15"
toml = "0.8"
serde_json = "1"
dirs = "6"
thiserror = "2"
alloy-signer-local = "1"

[dev-dependencies]
wiremock = "0.6"
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1

