[project]
name = "x402-echo-server"
version = "0.2.0"
description = "Minimal x402 payment-gated echo server for testing x402curl"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "x402-payment-service @ git+https://github.com/second-state/x402-payment-service.git",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["echo_server*"]
